Switched from GLFW to Glutin Updated CMake to revert changes made for Windows Disabled output of RUSTC_TARGET_TRIPLE which seemed to cause cmake cache parse issues

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ find_package(cargo)
 include(Rust)
 
 cargo_dependency(cargo
-        PACKAGE_NAMES glfw gl
+        PACKAGE_NAMES glutin gl
         PACKAGE_VERSIONS * 0.6.0)
 
 set(RUSTC_FLAGS -L ${CMAKE_BINARY_DIR}/lib -L ${CMAKE_BINARY_DIR}/cargo/target/debug/deps)
@@ -23,5 +23,8 @@ rust_crate(src/main.rs
         TARGET_NAME scuti
         DESTINATION bin
         DEPENDS "${MAIN_DEPS}"
-        OTHER_RUSTC_FLAGS --crate-type bin
-        )
+        OTHER_RUSTC_FLAGS --crate-type bin)
+
+#add_custom_target(scuti ALL ${CARGO_EXECUTABLE} build
+#        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+#        SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/main.rs)
