--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,4 @@ authors = ["Daniel Cook <daniel@danielcook.me>"]
 
 [dependencies]
 gl = "0.6.0"
-
-[dependencies.glfw]
-git = "https://github.com/bjz/glfw-rs.git"
+glutin = "*"
